# forgeflow-harness

./: .gitignore  AGENTS.md  README.md  config.toml  pyproject.toml
docs/: codex_harness_architecture_design.md
docs/plans/: 20260315-codex-harness-week1.md  20260315-codex-harness-week2.md  20260315-codex-harness-week3.md  20260315-codex-harness-week4.md  20260315-codex-harness-weekly-checklist.md
docs/progress/: PROGRESS-20260316-codex-harness-week3.md
src/forgeflow_harness/: __init__.py  adapter.py  approvals.py  cli.py  config.py  guardrails.py  json_logging.py  models.py  normalizer.py  orchestrator.py  session.py  trace.py  workspace.py
tests/: test_harness.py
