[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forgeflow-harness"
version = "0.1.0"
description = "Week 1 Codex harness skeleton"
requires-python = ">=3.11"

[project.scripts]
forgeflow-harness = "forgeflow_harness.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
